// Copyright 2020 Anapaya Systems
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/scionproto/scion/anapaya/go/pkg/proto/bwreserver";

package anapaya.proto.bwreserver.v1;

import "google/protobuf/timestamp.proto";

service SessionService {
    // OpenSession returns a network endpoint to use for a data connection to the server.
    rpc OpenSession(OpenSessionRequest) returns (OpenSessionResponse) {}
    // Stats returns statistics for a client session.
    rpc Stats(StatsRequest) returns (StatsResponse) {}
}

enum Protocol {
    // Unspecified protocol
    PROTOCOL_UNSPECIFIED = 0;
    // UDP
    PROTOCOL_UDP = 1;
    // QUIC
    PROTOCOL_QUIC = 2;
}

message OpenSessionRequest {
    // The source ISD-AS.
    uint64 src_isd_as = 1;
    // The source host that requests to open a data session.
    bytes src_host = 2;
    // The protocol to be used.
    Protocol protocol = 3;
}

message OpenSessionResponse {
    // The session ID for the data session.
    uint64 session_id = 1;
    // The destination port.
    uint32 port = 2;
    // The protocol to be used.
    Protocol protocol = 3;
}

message StatsRequest {
    // The session ID for the data session.
    uint64 session_id = 1;
}

message StatsResponse {
        // The start timestamp of the session.
        google.protobuf.Timestamp start = 1;
        // The current timestamp.
        google.protobuf.Timestamp current = 2;
        // The number of bytes received from start to current.
        uint64 bytes_received = 3;
}
